--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
+  <link rel="icon" type="image/png" href="/sharing/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
   
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@200;400;600&family=Source+Code+Pro:wght@200;400;600&display=swap" type="text/css">
-<script type="module" crossorigin src="/assets/index.91ace9ed.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.96b3d7ce.js">
-  <link rel="stylesheet" href="/assets/vendor.7bd5b0b7.css">
+<script type="module" crossorigin src="/sharing/assets/index.91ace9ed.js"></script>
+  <link rel="modulepreload" href="/sharing/assets/vendor.96b3d7ce.js">
+  <link rel="stylesheet" href="/sharing/assets/vendor.7bd5b0b7.css">
 </head>
 <body>
   <div id="app"></div>
